# minecraft_thingy

./: CMakeLists.txt  README.md  config.toml  imgui.ini
GLFW/lib/: glfw3dll.lib
GLFW/share/doc/GLFW/html/: build_8dox.html  build_guide.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  deprecated.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_7d046523570a4bf058ddf3b10b545b6c.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  group__buttons.html  group__context.html  group__errors.html  group__gamepad__axes.html  group__gamepad__buttons.html  group__hat__state.html  group__init.html  group__input.html  group__joysticks.html  group__keys.html  group__mods.html  group__monitor.html  group__native.html  group__shapes.html  group__vulkan.html  group__window.html  index.html  input_8dox.html  input_guide.html  internal_8dox.html  internals_guide.html  intro_8dox.html  intro_guide.html  (+20 more)
GLFW/share/doc/GLFW/html/search/: all_10.js  all_11.js  all_12.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  groups_7.js  groups_8.js  groups_9.js  groups_a.js  pages_0.js  pages_1.js  pages_3.js  (+18 more)
include/: Camera.h
src/: log.h  main.cpp
src/noise/: NoiseGenerator.h  PerlinNoiseGenerator.cpp  PerlinNoiseGenerator.h
src/renderers/: MinecraftThingyRenderer.cpp  MinecraftThingyRenderer.h
src/shaders/: cube_render.geom  cube_render.vert  mvp_tex_passthrough.frag  mvp_tex_passthrough.vert  terrain_mesh.frag
src/ui/: UI.cpp  UI.h  Window.cpp  Window.h
src/utils/: Direction.h  LowResPoint.h  Random.h  files.cpp  files.h
src/world/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Voxel.h
